# app/Http/Controllers/API/V1/OrderContoller.php
@@ -4,8 +4,11 @@ namespace App\Http\Controllers\API\V1;
 
 use App\Http\Controllers\Controller;
 use App\Http\Resources\API\V1\BookOrderResource;
+use App\Http\Resources\API\V1\BookReadResource;
+use App\Http\Resources\API\V1\BookShowOrderResource;
 use App\Http\Resources\BookResource;
 use App\Models\Book;
+use App\Models\RentBook;
 use Illuminate\Http\Request;
 
 /**
@@ -58,5 +61,102 @@ class OrderContoller extends Controller
         ]);
     }
 
+
+    /**
+     * @OA\Get(
+     *      path="/api/v1/get-book/{id}",
+     *      security={{"api":{}}},
+     *      summary="Get a single Book by ID",
+     *      description="Retrieve a single Book by its ID",
+     *      tags={"Student API"},
+     *      @OA\Parameter(
+     *          name="id",
+     *          in="path",
+     *          required=true,
+     *          description="ID of the Book to retrieve",
+     *          @OA\Schema(type="integer")
+     *      ),
+     *      @OA\Response(response=200,description="Successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/Order"),
+     *     ),
+     *      @OA\Response(response=404,description="Not found",
+     *          @OA\JsonContent(ref="#/components/schemas/Error"),
+     *      ),
+     * )
+     */
+    public function show(string $id)
+    {
+        $book = Book::find($id);
+        if(!$book){
+            return response()->json([
+                'message' => "Book not found",
+                'code' => 403,
+            ]);
+        }
+
+        return response()->json([
+            'data' => new BookShowOrderResource($book),
+            'code' => 200
+        ]);
+    }
+
+    /**
+     *@OA\Get(
+     *      path="/api/v1/read-book",
+     *      security={{"api":{}}},
+     *      description="Retrieve all Student",
+     *      tags={"Student API"},
+     *      @OA\Response(response=200,description="Successful operation",
+     *           @OA\JsonContent(ref="#/components/schemas/Order"),
+     *      ),
+     *      @OA\Response(response=404,description="Not found",
+     *          @OA\JsonContent(ref="#/components/schemas/Error"),
+     *      ),
+     * )
+     */
+    public function readBook()
+    {
+        $id = auth('api')->user()->id;
+        $book = RentBook::select('id', 'book_id', 'is_taken', 'created_at')->where('user_id',$id)->where('is_taken', 0)->get();
+        if(!$book){
+            return response()->json([
+                'message' => "Book not found",
+                'code' => 403,
+            ]);
+        }
+        return response()->json([
+            'data' => BookReadResource::collection($book),
+            'code' => 200
+        ]);
+    }
+
+    /**
+     *@OA\Get(
+     *      path="/api/v1/existing-book",
+     *      security={{"api":{}}},
+     *      description="Retrieve all Student",
+     *      tags={"Student API"},
+     *      @OA\Response(response=200,description="Successful operation",
+     *           @OA\JsonContent(ref="#/components/schemas/Order"),
+     *      ),
+     *      @OA\Response(response=404,description="Not found",
+     *          @OA\JsonContent(ref="#/components/schemas/Error"),
+     *      ),
+     * )
+     */
+    public function existingBook(){
+        $id = auth('api')->user()->id;
+        $book = RentBook::select('id', 'book_id', 'is_taken', 'created_at')->where('user_id',$id)->where('is_taken', 1)->get();
+        if(!$book){
+            return response()->json([
+                'message' => "Book not found",
+                'code' => 403,
+            ]);
+        }
+        return response()->json([
+            'data' => BookReadResource::collection($book),
+            'code' => 200
+        ]);
+    }
 
 }
